bag item code beautified to fix footer being cut off

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -81,6 +81,10 @@ i {
     border: 2px solid black !important;
 }
 
+.dropdown-item{
+    background-color:#80C4FF;
+}
+
 a.dropdown-item-sm{
     color:#1a1a1a;
 }
